# autorisen

./: .codexignore  .dockerignore  .env.example  .gitattributes  .gitignore  .heroku-config  .markdown.json  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.override.md  AUTONOMY_PLAYBOOK.md  Aptfile  CHANGELOG.md  CODEX_STATUS_REPORT.md  CapeControl_Guiding_Principles_Playbook.md  Copy_app.py  DEVELOPMENT_CONTEXT.md  DOCKER_README.md  Dockerfile  Dockerfile.hub  Dockerfile.production  Dockerfile.worker  Makefile  MakefileV2  PHASE_2_COMPLETE.md  PROJECT_PLAN.md  Procfile  README-local-dev.md  README-local.md  README.md  README.txt  REPORT_AUTH_IAT_MS.md  RJKCV.md  ROADMAP.md  alembic.ini  appscss.py  auth_api_standalone.py  autoplan.md  (+55 more)
backend/: .dockerignore  .env.development  .env.sandbox  Dockerfile  Makefile  Procfile  alembic.ini  alembic.ini.bak  auth_api_standalone.py  complete_stripe_test.sh  demo_ai_audit_service.py  demo_ai_rate_limiting.py  emergency_production_patch.py  fix_database_relationships.py  fix_enum_constraint.py  heroku_production_fix.py  init_analytics_db.py  integration_test.py  migrate_auth.py  migrate_payment.py  migrate_stripe_fields.py  pyproject.toml  pytest.ini  quick_audit_demo.py  requirements-optional.txt  requirements.txt  seed_db.py  seed_developer.py  setup.py  start.sh  start_stripe.sh  test_ai_audit_service.py  test_ai_personalization.py  test_alert_system.py  test_auth_system.py  test_cape_ai.db  test_final_stripe.py  test_models.db  test_stripe_simple.py  test_webhook_config.py
(+1622 files in other folders)
