[project]
name = "autorisen"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "passlib[bcrypt]>=1.7",
  "PyJWT>=2.9",
  "email-validator>=2.0",
  "python-jose[cryptography]>=3.3,<4",
  "slowapi>=0.1.9",
  "httpx>=0.27",
  "sentry-sdk>=2.0",
  "anyio>=4.4",
]

[tool.ruff]
line-length = 100
